--- a/pom.xml
+++ b/pom.xml
@@ -1,145 +1,150 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.evrythng</groupId>
-    <artifactId>evrythng-tools</artifactId>
-    <packaging>pom</packaging>
-    <version>1.1.0-SNAPSHOT</version>
+	<groupId>com.evrythng</groupId>
+	<artifactId>evrythng-tools</artifactId>
+	<packaging>pom</packaging>
+	<version>1.1.0-SNAPSHOT</version>
 
-    <name>evrythng-tools</name>
-    <description>Java tools around the EVRYTHNG API.</description>
-    <url>https://github.com/evrythng/evrythng-tools</url>
+	<name>evrythng-tools</name>
+	<description>Java tools around the EVRYTHNG API.</description>
+	<url>https://github.com/evrythng/evrythng-tools</url>
 
-    <organization>
-        <name>EVRYTHNG Ltd London / Zurich</name>
-        <url>http://www.evrythng.com</url>
-    </organization>
-    
-    <licenses>
-        <license>
-            <name>The Apache Software License, Version 2.0</name>
-            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-            <distribution>repo</distribution>
-        </license>
-    </licenses>
+	<organization>
+		<name>EVRYTHNG Ltd London / Zurich</name>
+		<url>http://www.evrythng.com</url>
+	</organization>
 
-    <developers>
-        <developer>
-            <id>dom</id>
-            <email>dom@evrythng.com</email>
-            <name>Dominique Guinard</name>
-            <roles>
-                <role>Chief Technology Officer</role>
-            </roles>
-        </developer>
-        <developer>
-            <id>pedro</id>
-            <email>pedro@evrythng.com</email>
-            <name>Pedro de Almeida</name>
-            <roles>
-                <role>Lead Developer</role>
-            </roles>
-        </developer>
-        <developer>
-            <id>thomas</id>
-            <email>thomas@evrythng.com</email>
-            <name>Thomas Pham</name>
-            <roles>
-                <role>Lead Infrastructure / Developer</role>
-            </roles>
-        </developer>
-        <developer>
-            <id>my</id>
-            <email>my@evrythng.com</email>
-            <name>Michel Yerly</name>
-            <roles>
-                <role>Senior Backend Developer</role>
-            </roles>
-        </developer>
-    </developers>
+	<licenses>
+		<license>
+			<name>The Apache Software License, Version 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
 
-    <properties>
-        <!-- Versions -->
-        <version.httpclient>4.2.1</version.httpclient>
-        <jackson.databind.version>2.1.0</jackson.databind.version>
-        <version.hibernate-validator>4.3.0.Final</version.hibernate-validator>
-        <version.jackson-mapper-asl>1.9.9</version.jackson-mapper-asl>
-    </properties>
+	<developers>
+		<developer>
+			<id>dom</id>
+			<email>dom@evrythng.com</email>
+			<name>Dominique Guinard</name>
+			<roles>
+				<role>Chief Technology Officer</role>
+			</roles>
+		</developer>
+		<developer>
+			<id>pedro</id>
+			<email>pedro@evrythng.com</email>
+			<name>Pedro de Almeida</name>
+			<roles>
+				<role>Lead Developer</role>
+			</roles>
+		</developer>
+		<developer>
+			<id>thomas</id>
+			<email>thomas@evrythng.com</email>
+			<name>Thomas Pham</name>
+			<roles>
+				<role>Lead Infrastructure / Developer</role>
+			</roles>
+		</developer>
+		<developer>
+			<id>my</id>
+			<email>my@evrythng.com</email>
+			<name>Michel Yerly</name>
+			<roles>
+				<role>Senior Backend Developer</role>
+			</roles>
+		</developer>
+	</developers>
 
-    <modules>
-        <module>thng-resource-model</module>
-        <module>evrythng-java-wrapper</module>
-    </modules>
+	<properties>
+		<!-- Versions -->
+		<version.httpclient>4.2.1</version.httpclient>
+		<jackson.databind.version>2.1.0</jackson.databind.version>
+		<version.hibernate-validator>4.3.0.Final</version.hibernate-validator>
+		<version.jackson-mapper-asl>1.9.9</version.jackson-mapper-asl>
+	</properties>
 
-    <build>
-        <plugins>
-            <plugin>
-                <!-- Ensure IDEs use the correct level for compiling. -->
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.0</version>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-source-plugin</artifactId>
-                <version>2.2.1</version>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.9</version>
-            </plugin>
-        </plugins>
-    </build>
-    
-    <repositories>
-        <repository>
-            <id>evrythng-public-snapshots</id>
-            <name>Public Snapshots</name>
-            <url>https://internal.evrythng.net/nexus/content/repositories/evrythng-public-snapshots</url>
-            <releases>
-                <enabled>false</enabled>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-        </repository>
-        <repository>
-            <id>evrythng-public-releases</id>
-            <name>Public Releases</name>
-            <url>https://internal.evrythng.net/nexus/content/repositories/evrythng-public-releases</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </repository>
-    </repositories>
+	<modules>
+		<module>thng-resource-model</module>
+		<module>evrythng-java-wrapper</module>
+	</modules>
 
-    <scm>
-        <connection>scm:git:git://github.com/evrythng/evrythng-tools.git</connection>
-        <developerConnection>scm:git:git@github.com:evrythng/evrythng-tools.git</developerConnection>
-        <url>https://github.com/evrythng/evrythng-tools</url>
-    </scm>
-    
-    <issueManagement>
-        <url>https://github.com/evrythng/evrythng-tools/issues</url>
-        <system>GitHub Issues</system>
-    </issueManagement>
+	<build>
+		<plugins>
+			<plugin>
+				<!-- Ensure IDEs use the correct level for compiling. -->
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.0</version>
+				<configuration>
+					<source>1.6</source>
+					<target>1.6</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<version>2.2.1</version>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>2.9</version>
+			</plugin>
+		</plugins>
+	</build>
 
-    <distributionManagement>
-        <repository>
-            <id>evrythng-public-releases</id>
-            <name>Public Releases</name>
-            <url>https://internal.evrythng.net/nexus/content/repositories/evrythng-public-releases</url>
-            <uniqueVersion>false</uniqueVersion>
-        </repository>
-        <snapshotRepository>
-            <id>evrythng-public-snapshots</id>
-            <name>Public Snapshots</name>
-            <url>https://internal.evrythng.net/nexus/content/repositories/evrythng-public-snapshots</url>
-            <uniqueVersion>false</uniqueVersion>
-        </snapshotRepository>
-    </distributionManagement>
+	<repositories>
+		<repository>
+			<id>evrythng-public-snapshots</id>
+			<name>Public Snapshots</name>
+			<url>https://internal.evrythng.net/nexus/content/repositories/evrythng-public-snapshots</url>
+			<releases>
+				<enabled>false</enabled>
+			</releases>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+		</repository>
+		<repository>
+			<id>evrythng-public-releases</id>
+			<name>Public Releases</name>
+			<url>https://internal.evrythng.net/nexus/content/repositories/evrythng-public-releases</url>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+		</repository>
+	</repositories>
+
+	<scm>
+		<connection>scm:git:git://github.com/evrythng/evrythng-tools.git</connection>
+		<developerConnection>scm:git:git@github.com:evrythng/evrythng-tools.git</developerConnection>
+		<url>https://github.com/evrythng/evrythng-tools</url>
+	</scm>
+
+	<issueManagement>
+		<url>https://github.com/evrythng/evrythng-tools/issues</url>
+		<system>GitHub Issues</system>
+	</issueManagement>
+
+	<distributionManagement>
+		<repository>
+			<id>evrythng-public-releases</id>
+			<name>Public Releases</name>
+			<url>https://internal.evrythng.net/nexus/content/repositories/evrythng-public-releases</url>
+			<uniqueVersion>false</uniqueVersion>
+		</repository>
+		<snapshotRepository>
+			<id>evrythng-public-snapshots</id>
+			<name>Public Snapshots</name>
+			<url>https://internal.evrythng.net/nexus/content/repositories/evrythng-public-snapshots</url>
+			<uniqueVersion>false</uniqueVersion>
+		</snapshotRepository>
+	</distributionManagement>
 </project>
