--- a/thng-resource-model/pom.xml
+++ b/thng-resource-model/pom.xml
@@ -19,6 +19,13 @@
             <artifactId>hibernate-validator</artifactId>
             <version>${version.hibernate-validator}</version>
         </dependency>
+        
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.databind.version}</version>
+        </dependency>
+        
         <dependency>
             <groupId>org.codehaus.jackson</groupId>
             <artifactId>jackson-mapper-asl</artifactId>
