--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,9 @@
 .settings
 .idea
 nb-configuration.xml
-nbactions.xml
 .DS_Store
 /thng-resource-model/target/
 /evrythng-java-wrapper/target/
 /evrythng-commons/target/
+*.versionsBackup
+nbactions*.xml
