--- a/evrythng-java-wrapper/pom.xml
+++ b/evrythng-java-wrapper/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.evrythng</groupId>
         <artifactId>evrythng-tools</artifactId>
-        <version>1.2.2</version>
+        <version>1.2.3-SNAPSHOT</version>
     </parent>
 
     <artifactId>evrythng-java-wrapper</artifactId>
