--- a/evrythng-commons/pom.xml
+++ b/evrythng-commons/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.evrythng</groupId>
         <artifactId>evrythng-tools</artifactId>
-        <version>1.3.0-SNAPSHOT</version>
+        <version>1.3.0</version>
     </parent>
 	
     <artifactId>evrythng-commons</artifactId>
