--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.evrythng</groupId>
@@ -63,7 +64,7 @@
 		<version.httpclient>4.2.1</version.httpclient>
 		<version.jackson-core>2.2.1</version.jackson-core>
 		<version.jackson-module-jaxb-annotations>2.2.0</version.jackson-module-jaxb-annotations>
-		
+
 	</properties>
 
 	<modules>
@@ -94,6 +95,12 @@
 				<artifactId>maven-javadoc-plugin</artifactId>
 				<version>2.9</version>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<version>2.5</version>
+			</plugin>
+
 		</plugins>
 	</build>
 
