--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,10 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.evrythng</groupId>
 	<artifactId>evrythng-java-sdk</artifactId>
 	<packaging>pom</packaging>
-	<version>1.9.0-SNAPSHOT</version>
+	<version>1.9.0</version>
 
 	<name>evrythng-java-sdk</name>
 	<description>Java tools around the EVRYTHNG API.</description>
@@ -133,7 +132,8 @@
 		<connection>scm:git:git://github.com/evrythng/evrythng-java-sdk.git</connection>
 		<developerConnection>scm:git:git@github.com:evrythng/evrythng-java-sdk.git</developerConnection>
 		<url>https://github.com/evrythng/evrythng-java-sdk</url>
-	</scm>
+	  <tag>evrythng-java-sdk-1.9.0</tag>
+  </scm>
 
 	<issueManagement>
 		<url>https://github.com/evrythng/evrythng-java-sdk/issues</url>
