--- a/evrythng-java-wrapper/pom.xml
+++ b/evrythng-java-wrapper/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.evrythng</groupId>
 		<artifactId>evrythng-java-sdk</artifactId>
-		<version>1.9.0</version>
+		<version>1.9.1-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>evrythng-java-wrapper</artifactId>
