--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,11 @@
 				<artifactId>maven-javadoc-plugin</artifactId>
 				<version>2.9</version>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<version>2.5</version>
+			</plugin>
 		</plugins>
 	</build>
 
